test/files/neg/t6375.check
t6375.scala:6: warning: Annotation is unused - it can be retained with a meta-annotation such as @(Bippy @getter)
  @Bippy           val x1: Int    // warn
   ^
t6375.scala:7: warning: Annotation is unused - it can be retained with a meta-annotation such as @(Bippy @scala.annotation.meta.field @getter)
  @(Bippy @field)  val x2: Int    // warn
   ^
t6375.scala:9: warning: Annotation is unused - it can be retained with a meta-annotation such as @(Bippy @scala.annotation.meta.setter @getter)
  @(Bippy @setter) val x4: Int    // warn
   ^
t6375.scala:10: warning: Annotation is unused - it can be retained with a meta-annotation such as @(Bippy @scala.annotation.meta.param @getter)
  @(Bippy @param)  val x5: Int    // warn
   ^
t6375.scala:20: warning: Annotation is unused - it can be retained with a meta-annotation such as @(Bippy @scala.annotation.meta.getter @field)
  @(Bippy @getter) private[this] val q1: Int = 1 // warn
   ^
t6375.scala:40: warning: Annotation is unused - it can be retained with a meta-annotation such as @(Bippy @scala.annotation.meta.getter @param)
  @(Bippy @getter) p2: Int,   // warn
   ^
t6375.scala:41: warning: Annotation is unused - it can be retained with a meta-annotation such as @(Bippy @scala.annotation.meta.setter @param)
  @(Bippy @setter) p3: Int,   // warn
   ^
t6375.scala:42: warning: Annotation is unused - it can be retained with a meta-annotation such as @(Bippy @scala.annotation.meta.field @param)
  @(Bippy @field) p4: Int     // warn
   ^
error: No warnings can be incurred under -Xfatal-warnings.
8 warnings found
one error found
